--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,17 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.menu-label {
+    font-weight: bold;
+    font-size: $font-size-base;
+}
+
+.settings-list-item {
+    font-size: 100%;
+    font-weight: 600;
+}
+
+.form-label{
+    font-weight: 500;
+}
