--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10417,3 +10417,17 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.menu-label {
+  font-weight: bold;
+  font-size: 0.9rem;
+}
+
+.settings-list-item {
+  font-size: 100%;
+  font-weight: 600;
+}
+
+.form-label {
+  font-weight: 500;
+}
+
