--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10431,3 +10431,15 @@ a.text-dark:focus {
   font-weight: 500;
 }
 
+.lock-active {
+  color: #ffa801;
+}
+
+.post-title {
+  font-size: 120%;
+}
+
+.post-data {
+  margin-left: 10px;
+}
+
