--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,18 @@
     font-weight: 600;
 }
 
-.form-label{
+.form-label {
     font-weight: 500;
+}
+
+.lock-active {
+    color: #ffa801;
+}
+
+.post-title {
+    font-size: 120%;
+}
+
+.post-data {
+    margin-left: 10px;
 }
