--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,8 +33,23 @@
 
 .post-title {
     font-size: 120%;
+
+    &-show {
+        font-weight: bold;
+    }
 }
 
 .post-data {
     margin-left: 10px;
+}
+
+.profile-image {
+    height: 72px;
+    width: 72px;
+    border-radius: 8px;
+}
+
+.profile-area {
+    border-right: 1px solid lightgrey;
+    max-width: 50%;
 }
