--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,11 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.nav-item {
+    text-decoration: none;
+    list-style: none;
+}
+
 .menu-label {
     font-weight: bold;
     font-size: $font-size-base;
