--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Components
+@import "components/sidebar.scss";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -57,4 +60,12 @@
 .profile-area {
     border-right: 1px solid lightgrey;
     max-width: 50%;
+}
+
+/******* Buttons *********/
+
+.main-action-button{
+    text-transform: uppercase;
+    font-size: 110%;
+    letter-spacing: 1pt;
 }
