Thread UI Update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10493,3 +10493,17 @@ a.text-dark:focus {
   letter-spacing: 1pt;
 }
 
+/******* Links *********/
+
+.action-link {
+  text-decoration: underline;
+  font-size: 110%;
+  color: #333;
+}
+
+.action-link:hover {
+  text-decoration: underline;
+  font-size: 110%;
+  color: #111;
+}
+
