Moderator Dashboard + Auth

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -62,6 +62,16 @@
     max-width: 50%;
 }
 
+/******* Tiles *********/
+.tile-body-text
+{
+    font-size: 16px;
+}
+
+.icon-xl
+{
+    font-size: 72px;
+}
 /******* Buttons *********/
 
 .main-action-button{
