--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10485,6 +10485,16 @@ a.text-dark:focus {
   max-width: 50%;
 }
 
+/******* Tiles *********/
+
+.tile-body-text {
+  font-size: 16px;
+}
+
+.icon-xl {
+  font-size: 72px;
+}
+
 /******* Buttons *********/
 
 .main-action-button {
