Cleanup Mentions + Sucess modal updated

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,9 @@
 // Components
 @import "components/sidebar.scss";
 
+// Components
+@import "components/checkmark.scss";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
