--- a/resources/assets/sass/components/icons.scss
+++ b/resources/assets/sass/components/icons.scss
@@ -1,5 +1,12 @@
 @import "../variables";
 
+
+
+/*
+################
+               Checkmark
+################
+*/
 #checkmark {
     stroke: #2ecc71;
     fill: none;
@@ -40,4 +47,14 @@
         -o-transform: scale(1);
         transform: scale(1);
     }
+}
+
+/*
+################
+               Lock
+################
+*/
+
+.lock-active {
+    color: #ffa801;
 }
