Main-layout + sidebar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10412,11 +10412,20 @@ a.text-dark:focus {
 }
 
 .sidebar {
-  width: 315px;
+  width: 16rem;
+}
+
+#sidebar-container {
+  border-top: 0;
+  border-bottom: 0;
 }
 
 .sidebar-heading {
   font-weight: bold;
+  font-size: 90%;
+  letter-spacing: .5pt;
+  text-transform: uppercase;
+  color: #7f8c8d;
 }
 
 .list-reset {
@@ -10424,7 +10433,18 @@ a.text-dark:focus {
 }
 
 .sidebar-link {
-  font-size: 110%;
+  font-size: 100%;
+  letter-spacing: .5pt;
+  color: #111;
+}
+
+.sidebar-link:hover {
+  text-decoration: none;
+}
+
+.trending-link {
+  color: #3490dc;
+  font-size: 100%;
 }
 
 .has-ellipsis {
@@ -10433,9 +10453,13 @@ a.text-dark:focus {
   overflow: hidden;
 }
 
+.icon-grey {
+  color: #a6b3b4;
+}
+
 /*
 ################
-               Checkmark
+Checkmark
 ################
 */
 
@@ -10496,7 +10520,7 @@ a.text-dark:focus {
 
 /*
 ################
-               Lock
+Lock
 ################
 */
 
