--- a/resources/assets/sass/components/icons.scss
+++ b/resources/assets/sass/components/icons.scss
@@ -1,10 +1,13 @@
 @import "../variables";
 
-
+.icon-grey
+{
+   color: $icon-grey;
+}
 
 /*
 ################
-               Checkmark
+Checkmark
 ################
 */
 #checkmark {
@@ -51,7 +54,7 @@
 
 /*
 ################
-               Lock
+Lock
 ################
 */
 
