Thread List + Navbar Revamp

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,6 +2,9 @@
 // Body
 $body-bg: #f5f8fa;
 
+$main-color: #d32f2f;
+$main-darker-color: #9a0007;
+
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
