--- a/resources/assets/sass/components/_list.scss
+++ b/resources/assets/sass/components/_list.scss
@@ -1,5 +1,29 @@
 @import "../variables";
 
+.thread-list-item
+{
+    padding: 0.75rem 1.25rem;
+    border-bottom: 1px solid rgba(0,0,0, .09);
+}
+
+.category-label
+{
+    background-color: #c4d9e0;
+    font-size: 11px;
+    padding: 5px 8px;
+    -webkit-border-radius: 290486px;
+    -moz-border-radius: 290486px;
+    border-radius: 290486px;
+    color: #111;
+    text-transform: uppercase;
+    font-weight: bold;
+
+    &:hover
+    {
+        text-decoration: none;
+    }
+}
+
 .post-title {
     font-size: 120%;
 
