--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10528,6 +10528,25 @@ Lock
   color: #ffa801;
 }
 
+.thread-list-item {
+  padding: 0.75rem 1.25rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+}
+
+.category-label {
+  background-color: #c4d9e0;
+  font-size: 11px;
+  padding: 5px 8px;
+  border-radius: 290486px;
+  color: #111;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.category-label:hover {
+  text-decoration: none;
+}
+
 .post-title {
   font-size: 120%;
 }
@@ -10546,15 +10565,29 @@ Lock
   border-radius: 8px;
 }
 
-.navbar-laravel {
-  background-color: #fff;
+.main-navbar {
+  background-color: #d32f2f;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.nav-link {
+  color: white;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  color: white;
 }
 
 .nav-item {
   text-decoration: none;
   list-style: none;
+}
+
+.nav-user {
+  background-color: #9a0007;
+  border-radius: 50% 50%;
 }
 
 .menu-label {
@@ -10578,6 +10611,29 @@ Lock
   text-transform: uppercase;
   font-size: 110%;
   letter-spacing: 1pt;
+}
+
+.btn-primary {
+  background-color: #2ecc71;
+  font-weight: bold;
+  border: 0;
+}
+
+.btn-primary:hover {
+  background-color: #27ae60;
+}
+
+.btn-search {
+  border-top-right-radius: 1em;
+  border-bottom-right-radius: 1em;
+  border: 1px solid lightgrey;
+  background: transparent;
+  color: white;
+}
+
+.btn-search:hover {
+  background-color: lightgrey;
+  color: #111;
 }
 
 /******* Links *********/
