--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,8 @@ $body-bg: #f5f8fa;
 $main-color: #d32f2f;
 $main-darker-color: #9a0007;
 
+$main-green: #2ecc71;
+
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
