--- a/resources/assets/sass/components/_list.scss
+++ b/resources/assets/sass/components/_list.scss
@@ -8,7 +8,7 @@
 
 .category-label
 {
-    background-color: #c4d9e0;
+    background-color: #dee6ec;
     font-size: 11px;
     padding: 5px 8px;
     -webkit-border-radius: 290486px;
