--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,7 +2,16 @@
 // Body
 $body-bg: #f5f8fa;
 
+$main-color: #d32f2f;
+$main-darker-color: #9a0007;
+
+$main-green: #2ecc71;
+
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+$font-color-grey: #7f8c8d;
+
+// Icons
+$icon-grey: #a6b3b4;
