--- a/resources/assets/sass/components/_list.scss
+++ b/resources/assets/sass/components/_list.scss
@@ -8,19 +8,20 @@
 
 .category-label
 {
-    background-color: #dee6ec;
     font-size: 11px;
     padding: 5px 8px;
     -webkit-border-radius: 290486px;
     -moz-border-radius: 290486px;
     border-radius: 290486px;
-    color: #111;
+    color: #fff;
     text-transform: uppercase;
     font-weight: bold;
+    letter-spacing: 0.8pt;
 
     &:hover
     {
         text-decoration: none;
+        color: #fff;
     }
 }
 
