--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -6,6 +6,7 @@ $main-color: #d32f2f;
 $main-darker-color: #9a0007;
 
 $main-green: #2ecc71;
+$main-green-darker: #27ae60;
 
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
